# blockchain-cpp

./: .gitignore  CMakeLists.txt  blockchain  main.cpp  simulation
core/: block.cpp  block.h  transaction.cpp  transaction.h
core/simulation/: simulation.cpp  simulation.h
core/src/: block.cpp  block.h  transaction.cpp
